After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706680 - dmabuf: fix mmap counting
dmabuf: fix mmap counting
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-23 16:22 UTC by Michael Olbrich
Modified: 2013-08-26 07:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.09 KB, patch)
2013-08-23 16:22 UTC, Michael Olbrich
committed Details | Review

Description Michael Olbrich 2013-08-23 16:22:57 UTC
Created attachment 252901 [details] [review]
patch

A successful gst_dmabuf_mem_map must always increment the mmap count.
Otherwise the first gst_dmabuf_mem_unmap will unmap the memory and all
other user will access unmapped memory.
Comment 1 Sebastian Dröge (slomo) 2013-08-26 07:30:01 UTC
commit 3c66c2a43d6f189b07ab682b4d23db04ade9acbc
Author: Michael Olbrich <m.olbrich@pengutronix.de>
Date:   Fri Aug 23 18:06:36 2013 +0200

    dmabuf: fix mmap counting
    
    A successful gst_dmabuf_mem_map must always increment the mmap count.
    Otherwise the first gst_dmabuf_mem_unmap will unmap the memory and all
    other user will access unmapped memory.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=706680