gst-libs/gst/allocators/gstdmabuf.c
@@ -90,8 +90,10 @@ gst_dmabuf_mem_map (GstMemory * gmem, gsize maxsize, GstMapFlags flags)
   if (mem->data) {
     /* only return address if mapping flags are a subset
      * of the previous flags */
-    if ((mem->mmapping_flags & prot) && (mem->mmap_size >= maxsize))
+    if ((mem->mmapping_flags & prot) && (mem->mmap_size >= maxsize)) {
       ret = mem->data;
+      mem->mmap_count++;
+    }
 
     goto out;
   }
